[package]
name = "rusty_react_redux"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies]
#wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
state = { version = "0.5", features = ["tls"] }
lazy_static = "1.4"
serde_derive = "^1.0.59"
js-sys = "0.3.36"
console_error_panic_hook = "0.1"
